Fixed front page section header title image: z-index.

--- a/assets/css/_front-page.scss
+++ b/assets/css/_front-page.scss
@@ -80,6 +80,7 @@ h3.featured-video-donate {
 		}
 
 		img {
+			z-index: 100;
 			max-height: 12vw;
 		}
 	}
