--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4176,6 +4176,7 @@ h3.featured-video-donate a:hover {
 }
 
 .front-page-content header img {
+  z-index: 100;
   max-height: 12vw;
 }
 
